--- a/Employee Turnover Prediction Model.ipynb
+++ b/Employee Turnover Prediction Model.ipynb
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "1afb842b",
       "metadata": {
         "id": "1afb842b"
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "2ebd14b8",
       "metadata": {
         "colab": {
@@ -376,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "e7f5cca5",
       "metadata": {
         "colab": {
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "ab86b851",
       "metadata": {
         "colab": {
@@ -475,7 +475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "114497b3",
       "metadata": {
         "colab": {
@@ -504,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "49539479",
       "metadata": {
         "colab": {
@@ -833,7 +833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "1c23bbdb",
       "metadata": {
         "colab": {
@@ -1078,7 +1078,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "b76a9806",
       "metadata": {
         "colab": {
@@ -1299,7 +1299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "69fb209b",
       "metadata": {
         "id": "69fb209b"
@@ -1312,7 +1312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "e401f360",
       "metadata": {
         "colab": {
@@ -1340,7 +1340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "f92bc50f",
       "metadata": {
         "id": "f92bc50f"
@@ -1353,7 +1353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "3bbe72c5",
       "metadata": {
         "colab": {
@@ -1591,7 +1591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "e81a64e5",
       "metadata": {
         "colab": {
@@ -1628,7 +1628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "953f60ee",
       "metadata": {
         "colab": {
@@ -3176,7 +3176,7 @@
         "id": "0je8-d2yj3WI"
       },
       "id": "0je8-d2yj3WI",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3192,7 +3192,7 @@
         "outputId": "d2456ea7-20f5-46ca-f536-dada76534f72"
       },
       "id": "qOgqd8X8mV3D",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3218,7 +3218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "3dea2e14",
       "metadata": {
         "colab": {
@@ -3455,7 +3455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "8815e244",
       "metadata": {
         "colab": {
@@ -3515,7 +3515,7 @@
         "outputId": "e6b76f6d-48f8-40f0-c416-7544a648e85c"
       },
       "id": "KUL8agpoisKf",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3564,7 +3564,7 @@
         "outputId": "65f873d4-82fa-499b-c697-3e0e646f1a70"
       },
       "id": "clv3EqHKoKXh",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3597,12 +3597,12 @@
         "id": "pLroJ3CEnhuo"
       },
       "id": "pLroJ3CEnhuo",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "79fa9b52",
       "metadata": {
         "colab": {
@@ -4177,7 +4177,7 @@
         "outputId": "18706b21-ef07-4440-b408-3b03751c6f48"
       },
       "id": "LjqiRnjEn9PV",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4554,7 +4554,7 @@
         "outputId": "c93a9ca3-8754-4ed6-ee7c-c7697488b756"
       },
       "id": "A3SG5hFStX2k",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5212,7 +5212,7 @@
         "outputId": "e5176d16-1b47-45ef-db41-782f0e9f4380"
       },
       "id": "yQkLMBiX_9iW",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5260,7 +5260,7 @@
         "outputId": "65bef170-2a7a-43b8-9e0a-fd21d476e876"
       },
       "id": "nLGjD5YAuLEz",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5450,7 +5450,7 @@
         "outputId": "71e918c8-cbeb-414a-bf3f-6c3834177fb3"
       },
       "id": "4KUd1gswvAcU",
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5535,7 +5535,7 @@
         "outputId": "194f291d-2ced-4e87-93b4-0128429b3849"
       },
       "id": "F2K1akwWwkex",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6068,6 +6068,55 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "### Conclusion\n",
+        "\n",
+        "- The reasons that employees leave their jobs can be complex.\n",
+        "\n",
+        "- Factors such as job satisfaction, hours worked, evaluation, salary, workload, and promotion play an important role in employee turnover.\n",
+        "\n",
+        "- Companies ignoring employees' satisfaction, efforts and productivity can cause them to leave.\n",
+        "\n",
+        "- Employers should stay aware of competitor efforts and make sure to appreciate employee efforts through promotions, monetary  and non-monetary appreciation.\n",
+        "\n",
+        "- Work accidents do not play an important role in influencing why employees quit.\n"
+      ],
+      "metadata": {
+        "id": "gFIXXKcBCgEh"
+      },
+      "id": "gFIXXKcBCgEh"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Recommendations\n",
+        "\n",
+        "- The company needs to value its most productive employees and reward them with a salary increase and/or promotions.\n",
+        "\n",
+        "- The company should also avoid overwhelming employees with lots of projects and long working hours but should advocate for a fair workload and work-life balance.\n",
+        "\n",
+        "- To keep employees motivated and engaged, the firm needs to promote upskilling through training.\n",
+        "\n",
+        "- Lastly, the company should promote an open, transparent, and meritocratic culture where all employees are valued, treated fairly  and experience job satisfaction."
+      ],
+      "metadata": {
+        "id": "EalfpJh9C200"
+      },
+      "id": "EalfpJh9C200"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "59uWoXyBC1KL"
+      },
+      "id": "59uWoXyBC1KL",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
